0.2.6
Jumping to bookmar now also places cursor at bookmark.
Plugins can now use restore session routine.
Fixed minor dnd bug.
Added barber pole to restore session.
Fixed numerous minor widget sensitivity bugs.
Plugin folder changed is now ~/.KKEdit/plugins-gtk.
Fixed minor memory leak.
Made switchPage callback visible to plugins.
Stoped horizontal scrollbar flashing up when wrap lines is active.
Removed some small error messages from startup.
Fixed minor free bug when docviewer is disabled.
Updated help file and translations.
Fixed odd characters in tab name when truncated with elipses.
Fixed crash when ctags gets confused and produces an enormous function name.
Added 'Sort Tabs' to file menu.
Fixed some minor encoding to UTF8 bugs.
Fixed bug when loading certain html files.
Fixed minor callback bug in prefs/plugin prefs.
Speeded up load session.
Code clean.
Fixed bug where closing too many tabs too fast caused a segfault.
Fixed regex find lockup .
Can now do backward regex search.
Redoing regex find/replace.
Can now only spell check whole document if document is 'clean'.
Removed unneeded reference to libunique from build files.
Removed debug flags from makefile.am.
Spell check document now sets the dirty flag correctly.
Changed dropbox to dropboxentry in spellcheck word dialog.
Fixed bug in spell check word.
Fixed some free() bugs.
Improved 'ReadLink Before Opening File' option, now handles relative links better, and uses the 'real' filename for the tab name if set, if not uses the link filename ( which may be different ).

0.2.5
Set prefs option for setting max characters displayed in bookmarks menu.
Set prefs option for setting max characters displayed in menus/context menu.
Set prefs option for setting max characters displayed in tabs.
Cleaned prefs code.
Fixed single instance bug in ubuntu.
If there is a text selection 'Replace All' now only affects the selected text instead of the whole document.