@@ -518,12 +518,13 @@ VISIBLE void restoreSession(GtkWidget* widget,gpointer data)
 
 	asprintf(&barcontrol,"%s/BarControl-%s",tmpFolderName,slice->randomName(6));
 	asprintf(&barcommand,POLEPATH " \"Restoring Session\" \"%s\" \"pulse\" &",barcontrol);
-	system(barcommand);
-	debugFree(&barcommand,"restore session barcommand");
 
 	closeAllTabs(NULL,NULL);
 	while(gtk_events_pending())
 		gtk_main_iteration_do(false);
+
+	system(barcommand);
+	debugFree(&barcommand,"restore session barcommand");
 
 	doUpdateWidgets=false;
 
